polish UI and Fix bugs
