# apps/api/src/routes/authRoutes.js
@@ -1,8 +1,9 @@
 import { Router } from "express";
-import { login } from "../controllers/authController.js";
+import { login, signup } from "../controllers/authController.js";
 
 export function authRoutes() {
   const router = Router();
+  router.post("/signup", signup);
   router.post("/login", login);
   return router;
 }
